# naualertsbot

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  config.example.yml  docker-compose.yml  lint.sh  pyproject.toml  run_mypy.sh
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  docker-publish.yml  lint.yml
airalertbot/: __init__.py  __main__.py  bot.py  containers.py  db.py  graceful_exit.py  main.py  models.py  stats.py  texts.py
airalertbot/handlers/: __init__.py  basic.py  debug.py  settings.py  weeks.py
airalertbot/services/: __init__.py  alerts.py  weeks.py  worker.py
assets/: texts.yaml
naualertsbot/: __init__.py  __main__.py  adminutils.py  bot.py  containers.py  graceful_exit.py  main.py  models.py  stats.py  texts.py  utils.py
naualertsbot/handlers/: __init__.py  basic.py  debug.py  settings.py  weeks.py
naualertsbot/services/: __init__.py  alerts.py  weeks.py  worker.py
tasks/: format.yml  lint.yml
