[tool.poetry]
name = "naualertsbot"
version = "1.0.1"
description = ""
authors = ["Stanislav <h3xcode@envs.net>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
naualertsbot = "naualertsbot.__main__:poetry_main"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = { version = "^3.0.0b7", allow-prereleases = true }
aiohttp = "^3.8.5"
redis = {extras = ["hiredis"], version = "^4.5.5"}
dependency-injector = "^4.41.0"
python-dotenv = "^1.0.0"
coloredlogs = "^15.0.1"
openapi3 = "^1.8.1"
pydantic = "^1.10.9"
pytz = "^2023.3"
sentry-sdk = "^1.29.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.10.1"
mypy = "^1.0.0"
wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide.git" }
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
types-redis = "^4.5.5.2"
types-pytz = "^2023.3.0.0"
types-pyyaml = "^6.0.12.10"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
